@startuml

title __ENTITY's Class Diagram__\n

  namespace entity {
    class entity.Klient {
        - id : int
        - meno : String
        - priezvisko : String
        - uctyKlienta : List<Ucet>
        - vek : int
        + Klient()
        + Klient()
        + getId()
        + getMeno()
        + getNarodnost()
        + getPocetUctovKlienta()
        + getPriezvisko()
        + getUctyKlienta()
        + getVek()
        + nacitajUcty()
        + odoberUcet()
        + pridajUcet()
        + setId()
        + setMeno()
        + setNarodnost()
        + setPriezvisko()
        + setVek()
        + toString()
        - jeRovnakeCisloUctu()
    }
  }
  

  namespace entity {
    class entity.Ucet {
        - cisloUctu : String
        - id : int
        - mnozstvoPenazi : double
        + Ucet()
        + Ucet()
        + getCisloUctu()
        + getId()
        + getKlient()
        + getMnozstvoPenazi()
        + getTyp()
        + setCisloUctu()
        + setId()
        + setMnozstvoPenazi()
        + setTyp()
        + toString()
    }
  }
  

  entity.Klient o-- enums.Narodnost : narodnost
  entity.Ucet o-- entity.Klient : klient
  entity.Ucet o-- enums.TypUctu : typ


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
